<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 GermainZ@xda-developers.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">DynamicAlarmIcon</string>
    <string name="xposed_description">Make the alarm icon show you the set alarm\'s time</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_support_summary">DynamicAlarmIcon by GermainZ</string>
    <string name="pref_clock_style_title">Clock style</string>
    <string name="pref_clock_color_title">Clock color</string>
    <string name="pref_show_app_icon_title">Show launcher icon</string>
    <string name="clock_style_aosp">AOSP</string>
    <string name="clock_style_touchwiz">TouchWiz</string>
    <string name="dialog_ok">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="opacity">Opacity</string>
    <string name="hex">Hex Color</string>
    <string name="apply">Apply</string>
    <string name="invalid_color">Invalid Color</string>
</resources>
