<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 GermainZ@xda-developers.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.germainz.dynamicalarmicon">
    <Preference
        android:key="pref_support"
        android:title="@string/pref_support_title"
        android:summary="@string/pref_support_summary">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://forum.xda-developers.com/xposed/modules/dynamicalarmicon-t2828309"/>
    </Preference>

    <Preference
        android:key="pref_clock_color"
        android:title="@string/pref_clock_color_title"/>

    <com.germainz.dynamicalarmicon.ImageListPreference
        android:key="pref_clock_style"
        android:title="@string/pref_clock_style_title"
        android:entries="@array/clock_style_entries"
        android:entryValues="@array/clock_style_values"
        app:entryImages="@array/clock_style_icons"
        android:defaultValue="0"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_show_app_icon"
        android:title="@string/pref_show_app_icon_title"/>
</PreferenceScreen>
